--- a/Editor/PeartreeGames.BlockyWorldStreamer.Editor.asmdef
+++ b/Editor/PeartreeGames.BlockyWorldStreamer.Editor.asmdef
@@ -4,6 +4,7 @@
   "references": [
     "PeartreeGames.BlockyWorldEditor",
     "PeartreeGames.BlockyWorldEditor.Editor",
+    "PeartreeGames.BlockyWorldStreamer",
     "Unity.Addressables",
     "Unity.Addressables.Editor",
     "Unity.ResourceManager"
