--- a/Editor/PeartreeGames.BlockyWorldStreamer.Editor.asmdef
+++ b/Editor/PeartreeGames.BlockyWorldStreamer.Editor.asmdef
@@ -7,7 +7,8 @@
     "PeartreeGames.BlockyWorldStreamer",
     "Unity.Addressables",
     "Unity.Addressables.Editor",
-    "Unity.ResourceManager"
+    "Unity.ResourceManager",
+    "Unity.EditorCoroutines.Editor"
   ],
   "includePlatforms": [
     "Editor"
