--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "com.peartreegames.blockyworldeditor": "0.1.6",
     "com.peartreegames.evtvariables": "0.1.1",
-    "com.unity.modules.uielements": "0.1.0"
+    "com.unity.modules.uielements": "0.1.0",
+    "com.unity.editorcoroutines": "1.0.0"
   },
   "keywords": [
     "peartree"
