Update to evt-variables 0.2.1

--- a/Runtime/PeartreeGames.BlockyWorldStreamer.asmdef
+++ b/Runtime/PeartreeGames.BlockyWorldStreamer.asmdef
@@ -3,7 +3,7 @@
   "rootNamespace": "PeartreeGames.BlockyWorldStreamer",
   "references": [
     "PeartreeGames.BlockyWorldEditor",
-    "PeartreeGames.EvtVariables",
+    "PeartreeGames.Evt.Variables",
     "Unity.Addressables",
     "Unity.ResourceManager"
   ],
