--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "com.peartreegames.blockyworldstreamer",
-  "version": "0.1.5",
+  "name": "games.peartree.blocky.streamer",
+  "version": "0.2.0",
   "displayName": "Blocky World Streamer",
   "description": "Blocky Object Placer and World Streamer",
   "unity": "2021.2",
@@ -9,8 +9,8 @@
   "changelogUrl": "https://github.com/peartreegames/blocky-world-streamer/changelog.html",
   "licensesUrl": "https://github.com/peartreegames/blocky-world-streamer/licensing.html",
   "dependencies": {
-    "com.peartreegames.blockyworldeditor": "0.1.6",
-    "com.peartreegames.evt.variables": "0.2.1",
+    "games.peartree.blocky.editor": "0.2.0",
+    "games.peartree.evt.variables": "0.3.7",
     "com.unity.modules.uielements": "0.1.0",
     "com.unity.editorcoroutines": "1.0.0"
   },
